Add Experience Nugget socket, Supplementaries bubble easter egg, partially implement bubbling and fix un-upgradeable improvements displaying levels

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -5,6 +5,8 @@
   "tetra.material.shadow_steel.prefix": "Shadow Steel",
   "tetra.material.andesite_alloy": "Andesite Alloy",
   "tetra.material.andesite_alloy.prefix": "Andesite Alloy",
+  "tetra.material.zinc": "Zinc",
+  "tetra.material.zinc.prefix": "Zinc",
   "tetra.material.brass": "Brass",
   "tetra.material.brass.prefix": "Brass",
   "tetra.material.moonstone": "Moonstone",
@@ -33,12 +35,6 @@
   "tetra.material.booflo_hide.prefix": "Booflo Hide",
   "tetra.material.poise": "Poise",
   "tetra.material.poise.prefix": "Poise",
-  "tetra.material.thallasium": "Thallasium",
-  "tetra.material.thallasium.prefix": "Thallasium",
-  "tetra.material.terminite": "Terminite",
-  "tetra.material.terminite.prefix": "Terminite",
-  "tetra.material.aeternium": "Aeternium",
-  "tetra.material.aeternium.prefix": "Aeternium",
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
@@ -69,6 +65,12 @@
   "tetra.variant.single_socket/rockroot.description": "A gem, attached where the head meets the handle. The gem is enchanted and grants the tool the ability to slowly repair itself over time",
   "tetra.variant.sword_socket/rockroot": "Socket [\u00a77Rockroot\u00a7r]",
   "tetra.variant.sword_socket/rockroot.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the sword the ability to slowly repair itself over time",
+  "tetra.variant.double_socket/experience_nugget": "Socket [\u00a7aNugget of Experience\u00a7r]",
+  "tetra.variant.double_socket/experience_nugget.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the tool the ability to convert dropped experience to chunks",
+  "tetra.variant.single_socket/experience_nugget": "Socket [\u00a7aNugget of Experience\u00a7r]",
+  "tetra.variant.single_socket/experience_nugget.description": "A gem, attached where the head meets the handle. The gem is enchanted and grants the tool the ability to convert dropped experience to chunks",
+  "tetra.variant.sword_socket/experience_nugget": "Socket [\u00a7aNugget of Experience\u00a7r]",
+  "tetra.variant.sword_socket/experience_nugget.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the sword the ability to convert dropped experience to chunks",
   "tetra/schematic/toolbelt/nullifier.slot1": "Material",
   "tetra/schematic/toolbelt/nullifier.name": "Nullifier",
   "tetra/schematic/toolbelt/nullifier.description": "Attach a gravity nullification unit, which lowers the gravity experienced by the belt's wearer. As a side-effect of this, fall damage is also completely nullified.",
@@ -98,7 +100,7 @@
   "tetrapak.stats.cleaving": "Cleaving",
   "tetrapak.stats.cleaving.tooltip": "This tool will make mobs and players occasionally drop their respective heads",
   "tetrapak.stats.voiding": "Voiding",
-  "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for an experience multiplier\n\n\u00a7ex%s \u00a77mob kill experience multiplier\n\u00a7ex%s \u00a77block experience multiplier",
+  "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it.",
   "tetrapak.stats.rainbow": "Rainbow",
   "tetrapak.stats.rainbow.tooltip": "This tool will break §e%s§r blocks §e%sx§r faster",
   "tetrapak.stats.floating": "Floating",
@@ -120,43 +122,48 @@
   "tetrapak.stats.moonsight": "Moonsight",
   "tetrapak.stats.moonsight.tooltip": "Wearing this belt will allow the wearer to see better under the moonlight",
   "tetrapak.stats.expboost": "EXP Boost",
-  "tetrapak.stats.expboost.tooltip": "Actions performed with this tool will reward \u00a7e%s\u00a7r more experience.",
+  "tetrapak.stats.expboost.tooltip": "Blocks mined and mobs killed with this tool will reward \u00a7e%s\u00a7r more experience",
+  "tetrapak.stats.solidifying": "Solidifying",
+  "tetrapak.stats.solidifying.tooltip": "Experience gained with use of this tool will be converted to Nuggets of Experience at a 1:1 rate",
   "tetra.variant.double_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.double_socket/red_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks.",
+  "tetra.variant.double_socket/red_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks",
   "tetra.variant.single_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.single_socket/red_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of red blocks.",
+  "tetra.variant.single_socket/red_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of red blocks",
   "tetra.variant.double_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
-  "tetra.variant.double_socket/orange_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of orange blocks.",
+  "tetra.variant.double_socket/orange_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of orange blocks",
   "tetra.variant.single_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
-  "tetra.variant.single_socket/orange_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of orange blocks.",
+  "tetra.variant.single_socket/orange_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of orange blocks",
   "tetra.variant.double_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.double_socket/yellow_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of yellow blocks.",
+  "tetra.variant.double_socket/yellow_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of yellow blocks",
   "tetra.variant.single_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.single_socket/yellow_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of yellow blocks.",
+  "tetra.variant.single_socket/yellow_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of yellow blocks",
   "tetra.variant.double_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.double_socket/green_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of green blocks.",
+  "tetra.variant.double_socket/green_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of green blocks",
   "tetra.variant.single_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.single_socket/green_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of green blocks.",
+  "tetra.variant.single_socket/green_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of green blocks",
   "tetra.variant.double_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.double_socket/blue_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blue blocks.",
+  "tetra.variant.double_socket/blue_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blue blocks",
   "tetra.variant.single_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.single_socket/blue_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blue blocks.",
+  "tetra.variant.single_socket/blue_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blue blocks",
   "tetra.variant.double_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.double_socket/indigo_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of indigo blocks.",
+  "tetra.variant.double_socket/indigo_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of indigo blocks",
   "tetra.variant.single_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.single_socket/indigo_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of indigo blocks.",
+  "tetra.variant.single_socket/indigo_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of indigo blocks",
   "tetra.variant.double_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.double_socket/violet_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of violet blocks.",
+  "tetra.variant.double_socket/violet_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of violet blocks",
   "tetra.variant.single_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.single_socket/violet_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of violet blocks.",
+  "tetra.variant.single_socket/violet_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of violet blocks",
   "tetra.variant.double_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.double_socket/white_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks.",
+  "tetra.variant.double_socket/white_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks",
   "tetra.variant.single_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.single_socket/white_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks.",
+  "tetra.variant.single_socket/white_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks",
   "tetra.variant.double_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks.",
+  "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks",
   "tetra.variant.single_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks.",
+  "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks",
+  "tetra.variant.double_socket/experience_nugget.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and converts experience into nuggets",
+  "tetra.variant.single_socket/experience_nugget": "Socket [\u00A7aNugget of Experience\u00a7r]",
+  "tetra.variant.single_socket/experience_nugget.description": "A gem, attached where the head meets the handle. The gem is enchanted and converts experience into nuggets",
   "tetrapak.advancements.wither_void.title": "The Flex",
   "tetrapak.advancements.wither_void.description": "Kill a Wither with a Shadow Steel tool",
   "tetrapak.recipe.auto_salvage": "Automatic Salvaging",
