Finish implementing bubbling and fix nullifier schematic

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -85,6 +85,9 @@
   "tetra/schematic/double/axe/cleaving.slot1": "Unholy Symbol",
   "tetra/schematic/double/axe/cleaving.name": "Cleaving",
   "tetra/schematic/double/axe/cleaving.description": "Supernaturally sharpen this tool with dark magic to cause slain monsters to occasionally drop their heads",
+  "tetra/schematic/tetrapak/bubbler.slot1": "Bubble Blower",
+  "tetra/schematic/tetrapak/bubbler.name": "Bubbler",
+  "tetra/schematic/tetrapak/bubbler.description": "Override the particle effects for all modules on this item with bubbles. Fun!",
   "tetra.improvement.tetrapak/radiant.name": "Radiant",
   "tetra.improvement.tetrapak/radiant.description": "The latent energy of Refined Radiance allows this tool to mass-harvest blocks the Refined Radiance tool head is effective on",
   "tetra.improvement.tetrapak/voiding.name": "Voiding",
@@ -95,6 +98,8 @@
   "tetra.improvement.tetrapak/reaping.description": "This tool is enchanted by dark magic to transform undead monsters into soul shards when slain",
   "tetra.improvement.tetrapak/cleaving.name": "Cleaving",
   "tetra.improvement.tetrapak/cleaving.description": "This tool has been sharpened to a razor edge by dark magic, causing slain monsters to occasionally drop their heads",
+  "tetra.improvement.tetrapak/bubbling.name": "Bubbling",
+  "tetra.improvement.tetrapak/bubbling.description": "Any particles produced by this item will be replaced with bubbles. Fun!",
   "tetrapak.stats.reaping": "Reaping",
   "tetrapak.stats.reaping.tooltip": "This tool will make undead mobs drop soul shards",
   "tetrapak.stats.cleaving": "Cleaving",
