Add FD support with canvas, rope, and straw materials

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -21,6 +21,7 @@
   "tetra.material.wicked_weave.prefix": "Wicked Weave",
   "tetra.material.ravager_hide": "Ravager Hide",
   "tetra.material.ravager_hide.prefix": "Ravager Hide",
+  "tetra.variant.basic_string/ravager_hide": "Ravager Hide Cord",
   "tetra.material.cave_roots": "Cave Roots",
   "tetra.material.cave_roots.prefix": "Cave Root",
   "tetra.material.crab_shell": "Crab Shell",
@@ -33,8 +34,16 @@
   "tetra.material.myalite.prefix": "Myalite",
   "tetra.material.booflo_hide": "Booflo Hide",
   "tetra.material.booflo_hide.prefix": "Booflo Hide",
+  "tetra.variant.basic_string/boofle_hide": "Booflo Hide Cord",
   "tetra.material.poise": "Poise",
   "tetra.material.poise.prefix": "Poise",
+  "tetra.material.straw": "Straw",
+  "tetra.material.straw.prefix": "Straw",
+  "tetra.variant.basic_string/straw": "Twined Straw",
+  "tetra.material.canvas": "Canvas",
+  "tetra.material.canvas.prefix": "Canvas",
+  "tetra.material.rope": "Rope",
+  "tetra.material.rope.prefix": "Rope",
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
