--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -44,6 +44,10 @@
   "tetra.material.canvas.prefix": "Canvas",
   "tetra.material.rope": "Rope",
   "tetra.material.rope.prefix": "Rope",
+  "tetra.material.blossom": "Blossom",
+  "tetra.material.blossom.prefix": "Blossom",
+  "tetra.material.azalea": "Azalea",
+  "tetra.material.azalea.prefix": "Azalea",
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
