--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 Version 0.4.3
     Improvements and fixes:
-        Fix an ObfuscationReflectionHelper crash every time an entity was killed with an arrow
+        Fix an ObfuscationReflectionHelper crash every time an entity is killed with an arrow
         Partly fix Refined Radiance effects not working correctly
     Known issues:
         The falling blocks spawned by Collapsing are not removed from the world clientside until relog
