Update Tetra and fix broken Quark corundum sockets

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -143,42 +143,42 @@
   "tetrapak.stats.expboost.tooltip": "Blocks mined and mobs killed with this tool will reward \u00a7e%s\u00a7r more experience",
   "tetrapak.stats.solidifying": "Solidifying",
   "tetrapak.stats.solidifying.tooltip": "Experience gained with use of this tool will be converted to Nuggets of Experience at a 1:1 rate",
-  "tetra.variant.double_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.double_socket/red_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks",
-  "tetra.variant.single_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.single_socket/red_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of red blocks",
-  "tetra.variant.double_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
-  "tetra.variant.double_socket/orange_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of orange blocks",
-  "tetra.variant.single_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
-  "tetra.variant.single_socket/orange_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of orange blocks",
-  "tetra.variant.double_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.double_socket/yellow_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of yellow blocks",
-  "tetra.variant.single_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.single_socket/yellow_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of yellow blocks",
-  "tetra.variant.double_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.double_socket/green_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of green blocks",
-  "tetra.variant.single_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.single_socket/green_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of green blocks",
-  "tetra.variant.double_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.double_socket/blue_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blue blocks",
-  "tetra.variant.single_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.single_socket/blue_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blue blocks",
-  "tetra.variant.double_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.double_socket/indigo_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of indigo blocks",
-  "tetra.variant.single_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.single_socket/indigo_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of indigo blocks",
-  "tetra.variant.double_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.double_socket/violet_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of violet blocks",
-  "tetra.variant.single_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.single_socket/violet_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of violet blocks",
-  "tetra.variant.double_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.double_socket/white_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks",
-  "tetra.variant.single_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.single_socket/white_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks",
-  "tetra.variant.double_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks",
-  "tetra.variant.single_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks",
+  "tetra.variant.double_socket/red_corundum_cluster": "Socket [\u00a7cRed Corundum\u00a7r]",
+  "tetra.variant.double_socket/red_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks",
+  "tetra.variant.single_socket/red_corundum_cluster": "Socket [\u00a7cRed Corundum\u00a7r]",
+  "tetra.variant.single_socket/red_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of red blocks",
+  "tetra.variant.double_socket/orange_corundum_cluster": "Socket [\u00a76Orange Corundum\u00a7r]",
+  "tetra.variant.double_socket/orange_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of orange blocks",
+  "tetra.variant.single_socket/orange_corundum_cluster": "Socket [\u00a76Orange Corundum\u00a7r]",
+  "tetra.variant.single_socket/orange_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of orange blocks",
+  "tetra.variant.double_socket/yellow_corundum_cluster": "Socket [\u00a7eYellow Corundum\u00a7r]",
+  "tetra.variant.double_socket/yellow_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of yellow blocks",
+  "tetra.variant.single_socket/yellow_corundum_cluster": "Socket [\u00a7eYellow Corundum\u00a7r]",
+  "tetra.variant.single_socket/yellow_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of yellow blocks",
+  "tetra.variant.double_socket/green_corundum_cluster": "Socket [\u00a7aGreen Corundum\u00a7r]",
+  "tetra.variant.double_socket/green_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of green blocks",
+  "tetra.variant.single_socket/green_corundum_cluster": "Socket [\u00a7aGreen Corundum\u00a7r]",
+  "tetra.variant.single_socket/green_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of green blocks",
+  "tetra.variant.double_socket/blue_corundum_cluster": "Socket [\u00a7bBlue Corundum\u00a7r]",
+  "tetra.variant.double_socket/blue_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blue blocks",
+  "tetra.variant.single_socket/blue_corundum_cluster": "Socket [\u00a7bBlue Corundum\u00a7r]",
+  "tetra.variant.single_socket/blue_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blue blocks",
+  "tetra.variant.double_socket/indigo_corundum_cluster": "Socket [\u00a75Indigo Corundum\u00a7r]",
+  "tetra.variant.double_socket/indigo_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of indigo blocks",
+  "tetra.variant.single_socket/indigo_corundum_cluster": "Socket [\u00a75Indigo Corundum\u00a7r]",
+  "tetra.variant.single_socket/indigo_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of indigo blocks",
+  "tetra.variant.double_socket/violet_corundum_cluster": "Socket [\u00a7dViolet Corundum\u00a7r]",
+  "tetra.variant.double_socket/violet_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of violet blocks",
+  "tetra.variant.single_socket/violet_corundum_cluster": "Socket [\u00a7dViolet Corundum\u00a7r]",
+  "tetra.variant.single_socket/violet_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of violet blocks",
+  "tetra.variant.double_socket/white_corundum_cluster": "Socket [\u00a7fWhite Corundum\u00a7r]",
+  "tetra.variant.double_socket/white_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks",
+  "tetra.variant.single_socket/white_corundum_cluster": "Socket [\u00a7fWhite Corundum\u00a7r]",
+  "tetra.variant.single_socket/white_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks",
+  "tetra.variant.double_socket/black_corundum_cluster": "Socket [\u00a70Black Corundum\u00a7r]",
+  "tetra.variant.double_socket/black_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks",
+  "tetra.variant.single_socket/black_corundum_cluster": "Socket [\u00a70Black Corundum\u00a7r]",
+  "tetra.variant.single_socket/black_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks",
   "tetra.variant.double_socket/experience_nugget.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and converts experience into nuggets",
   "tetra.variant.single_socket/experience_nugget": "Socket [\u00A7aNugget of Experience\u00a7r]",
   "tetra.variant.single_socket/experience_nugget.description": "A gem, attached where the head meets the handle. The gem is enchanted and converts experience into nuggets",
