Big fat rebalance to Quark materials! Removes the downside for corundum sockets, tweaks myalite, and fixes some too high tool levels on ravager hide and dragon scale.
the corundum socket catch-all entry displays in a weird place and i can't work out why

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -120,7 +120,7 @@
   "tetrapak.stats.voiding": "Voiding",
   "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it.",
   "tetrapak.stats.rainbow": "Rainbow",
-  "tetrapak.stats.rainbow.tooltip": "This tool will break §e%s§r blocks §e%sx§r faster",
+  "tetrapak.stats.rainbow.tooltip": "This tool will break §e%s§r blocks §e%s%%§r faster",
   "tetrapak.stats.floating": "Floating",
   "tetrapak.stats.floating.tooltip": "This tool defies gravity, causing both drops gathered by the tool and the tool itself to float",
   "tetrapak.stats.deforesting": "Deforesting",
@@ -143,6 +143,10 @@
   "tetrapak.stats.expboost.tooltip": "Blocks mined and mobs killed with this tool will reward \u00a7e%s\u00a7r more experience",
   "tetrapak.stats.solidifying": "Solidifying",
   "tetrapak.stats.solidifying.tooltip": "Experience gained with use of this tool will be converted to Nuggets of Experience at a 1:1 rate",
+  "tetra.variant.double_socket/visual_corundum_cluster": "Socket [Corundum]",
+  "tetra.variant.double_socket/visual_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blocks with matching color",
+  "tetra.variant.single_socket/visual_corundum_cluster": "Socket [Corundum]",
+  "tetra.variant.single_socket/visual_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blocks with matching color",
   "tetra.variant.double_socket/red_corundum_cluster": "Socket [\u00a7cRed Corundum\u00a7r]",
   "tetra.variant.double_socket/red_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks",
   "tetra.variant.single_socket/red_corundum_cluster": "Socket [\u00a7cRed Corundum\u00a7r]",
@@ -179,9 +183,6 @@
   "tetra.variant.double_socket/black_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks",
   "tetra.variant.single_socket/black_corundum_cluster": "Socket [\u00a70Black Corundum\u00a7r]",
   "tetra.variant.single_socket/black_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks",
-  "tetra.variant.double_socket/experience_nugget.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and converts experience into nuggets",
-  "tetra.variant.single_socket/experience_nugget": "Socket [\u00A7aNugget of Experience\u00a7r]",
-  "tetra.variant.single_socket/experience_nugget.description": "A gem, attached where the head meets the handle. The gem is enchanted and converts experience into nuggets",
   "tetrapak.advancements.wither_void.title": "The Flex",
   "tetrapak.advancements.wither_void.description": "Kill a Wither with a Shadow Steel tool",
   "tetrapak.recipe.auto_salvage": "Automatic Salvaging",
@@ -196,6 +197,7 @@
   "create.item_attributes.tetrapak.broken": "is broken",
   "create.item_attributes.tetrapak.honeable.inverted": "honing unavailable",
   "create.item_attributes.tetrapak.broken.inverted": "is not broken",
+  "tetrapak.matching": "matching",
   "tetrapak.red": "red",
   "tetrapak.orange": "orange",
   "tetrapak.yellow": "yellow",
